h1. CHANGELOG

h2. 2.2.28 January 20, 2013

* Devise default minimum password length is now eight (Devise 2.2.0)
* fix 'init' recipe for 'application.yml' to accommodate Devise default minimum password length of eight
* fix 'testing' recipe for Fabrication to accommodate longer password default in Devise (contributed by Samson Ootoovak)
* fix 'init' recipe to correct 'seeds.rb' error for Devise Confirmable option (contributed by Rémy Hannequin)
* update gem 'minitest-spec-rails' to 4.3.6
* update gem 'therubyracer' to 0.11.3
* update gem 'devise' to 2.2.2
* update gem 'zurb-foundation' to 3.2.4
* update gem 'mongoid-rspec' to 1.5.6
* update gem 'figaro' to 0.5.3
* update gem 'rspec-rails' to 2.12.2

h2. 2.2.27 December 24, 2012

* accommodate html2haml bug with an ugly workaround (https://github.com/RailsApps/rails-composer/issues/55)

h2. 2.2.26 December 22, 2012

* update 'saas' recipe with rails-recurly-subscription-saas example app
* option to specify gem's origin for gems specified in a defaults file (contributed by Michael Johnston)
* update gem 'bootstrap-sass' to 2.2.2.0
* update gem 'ruby_parser' to 3.1.1
* update gem 'slim' to 1.3.5
* update gem 'mongoid' to 3.0.15
* update gem 'better_errors' to 0.3.2

h2. 2.2.25 December 19, 2012

* check for RVM before executing '.rvmrc' section of extras recipe (contributed by Errin Larsen)
* update 'saas' recipe to add Rspec tests
* use 'find_or_create_by_email' instead of 'find_or_create_by_name'
* fix 'testing' recipe for Fabrication option

h2. 2.2.24 December 16, 2012

* use 'find_or_create_by_name' in the 'db/seeds.rb' file to avoid duplicate entries
* refactor to set default user and roles from 'application.yml' file
* add gem 'libv8' to accommodate gem 'therubyracer'

h2. 2.2.23 December 14, 2012

* use 'figaro' gem instead of 'local_env.yml' file to set local environment variables

h2. 2.2.22 December 11, 2012

* option to use 'local_env.yml' file to set local environment variables