@@ -1,5 +1,10 @@
 h1. CHANGELOG
 
+
+h2. 2.2.29 January 20, 2013
+
+* change the password used in examples from 'password' to 'changeme'
+
 h2. 2.2.28 January 20, 2013
 
 * Devise default minimum password length is now eight (Devise 2.2.0)
